--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,11 @@
   <title>SmartVote</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href="./app.css" rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="./app.js"></script>
 </head>
 <body>
-  <h1>SmartVote</h1>
+  <h1>SmartVote</h1><br>
   <h2>L'application de vote en ligne</h2>
   <h3>Plusieurs options s'offrent à vous </h3>
 
